Fix label spacing

--- a/packages/esm-outpatient-app/src/patient-queue-header/patient-queue-header.scss
+++ b/packages/esm-outpatient-app/src/patient-queue-header/patient-queue-header.scss
@@ -21,6 +21,11 @@
 
 .productiveHeading04 {
   @include carbon--type-style("productive-heading-04");
-  color: $ui-05;
-  padding: $spacing-03 0 0 0;
+  color: $text-01;
+}
+
+.labels {
+  p:first-of-type {
+    margin-bottom: 0.25rem;
+  }
 }
